# trytodo

./: .gitignore
backend/: .env  Cargo.toml  diesel.toml  docker-compose.yaml
backend/migrations/2023-08-11-042550_user/: up.sql
backend/migrations/2023-08-11-043934_TodoItems/: down.sql  up.sql
backend/src/: app.rs  database.rs  main.rs  models.rs  schema.rs
backend/src/models/: todo.rs  user.rs
backend/src/routes/: todo.rs  user.rs
backend/src/tests/: mod.rs  todos.rs  user.rs  utils.rs
backend/src/utils/: auth.rs  mod.rs  models.rs  server.rs
