[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.20"
bcrypt = "0.15.0"
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["mysql"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
mime = "0.3.17"
reqwest = "0.11.18"
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.183"
serde_json = "1.0.104"
time = "0.3.25"
tokio = { version = "1.30.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
